# onboarding

.github/workflows/: main.yml
cicd/fastapi-app-chart/: Chart.yaml  values.yaml
cicd/fastapi-app-chart/templates/: _helpers.tpl  deployment.yaml
cicd/fastapi-app-chart/templates/tests/: test-connection.yaml
cicd/fastapi_apps/: app.py  requirements.txt
cicd/maeddi-server/: Chart.yaml  values.yaml
cicd/maeddi-server/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  service.yaml
cicd/maeddi-server/templates/tests/: test-connection.yaml
fastapi_app/: pyproject.toml
fastapi_app/app/: app.py
fastapi_app_docker/: Dockerfile  docker-compose.yml
gke_dev/: Dockerfile
local_k8s/: fastapi_app.yml
local_k8s/fastapi-app-chart/templates/: NOTES.txt  service.yaml
